--- a/_config.yml
+++ b/_config.yml
@@ -54,4 +54,4 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-logo: '/assets/images/hafele-logo.png'
+logo: '/assets/images/hafele-logo.jpg'
