--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: Hafele-lock
 email: chao.ye@hafele.com.cn
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+该网站展示了海福乐(Hafele)中国子公司(HPC)电子锁产品。旨在为客户提供一个方便快捷的渠道了解产品，下载资料，观看视频等。
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://chao05.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
