--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github_username:  jekyll
 
 # Build settings
 
-remote_theme: pmarsceill/just-the-docs
+remote_theme: pmarsceill/just-the-docs@v0.3.3
 plugins:
   - jekyll-feed
 
