added another add-on file

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ github_username:  jekyll
 remote_theme: pmarsceill/just-the-docs@v0.3.3
 plugins:
   - jekyll-feed
+  - jekyll-admin
 
 # Exclude from processing.
 # The following items will not be processed, by default.
