--- a/admin/config.yml
+++ b/admin/config.yml
@@ -4,3 +4,9 @@ backend:
 
 # This line should *not* be indented
 media_folder: "/images/uploads" # Media files will be stored in the repo under images/uploads
+
+collections:
+  - name: add-on
+    label: add-on
+    folder: "/images/uploads"
+    create: true
