--- a/admin/config.yml
+++ b/admin/config.yml
@@ -10,3 +10,8 @@ collections:
     label: add-on
     folder: "/images/uploads"
     create: true
+    fields:
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Description", name: "description", widget: "text"}
+      - {label: "Image", name: "image", widget: "image"}
+      - {label: "Link", name: "link", widget: "string"}
