--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,4 +1,5 @@
 backend:
+  repo: https://github.com/chao05/chao05.github.io
   name: git-gateway
   branch: gh-pages # Branch to update (optional; defaults to master)
 
