--- a/_config.yml
+++ b/_config.yml
@@ -54,11 +54,11 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 logo: '/images/hafele-logo.jpg'
-google_analytics: GOOGLE_ACCESS_TOKEN
+google_analytics: G-MHS58PVCML
 
 contentful:
   spaces:
     - addons:
-        space: SPACE_ADDONS_ID
-        access_token: SPACE_ACCESS_TOKEN
+        space: e3d64fjiqat7
+        access_token: pVu7ndmX4xuYCmBEKKI8RqOHPTsOF31ytAwHlBmf0fI
                       
